# logseq-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
examples/: config.toml
examples/queries/: frisbee_tasks.edn  week_plan.edn
examples/rules/: common.edn
src/mcp_server_logseq/: __init__.py  audit.py  auth.py  blacklist.py  client.py  config.py  filesearch.py  guide.py  normalize.py  queries.py  resolve.py  server.py  writes.py
tests/: test_audit.py  test_blacklist.py  test_config.py  test_create_task.py  test_edit_block.py  test_examples.py  test_filesearch.py  test_list_pages.py  test_normalize.py  test_writes_queries.py
