[project]
name = "mcp-server-logseq"
version = "0.1.1"
description = "An MCP server for LogSeq API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Daniel Zholkovsky", email = "daniel@zholkovsky.com" }]
maintainers = [{ name = "Daniel Zholkovsky", email = "daniel@zholkovsky.com" }]
keywords = ["http", "mcp", "llm", "automation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.27,<2",
    "pydantic>=2.10.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "edn-format>=0.7",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
homepage = "https://github.com/dailydaniel/logseq-mcp"
repository = "https://github.com/dailydaniel/logseq-mcp"
issues = "https://github.com/dailydaniel/logseq-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-logseq = "mcp_server_logseq.__main__:main"
